 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "agent-eval"
 version = "0.1.0"
 description = "LangGraph-based agent for fixing Python code and benchmarking on HumanEvalFix"
 authors = [
     { name = "Agent Builder" }
 ]
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "datasets>=2.19.0",
     "evaluate>=0.4.0",
     "huggingface_hub>=0.23.0",
     "langchain>=0.2.10",
     "langchain-core>=0.3.12",
     "langchain-community>=0.2.10",
     "langchain-huggingface>=0.0.8",
     "langgraph>=0.2.21",
     "numpy>=1.24",
     "rich>=13.7.0",
     "tqdm>=4.66.0",
     "transformers>=4.44.0",
     "torch>=2.2.0",
 ]

 [project.optional-dependencies]
 dev = [
     "ruff>=0.5.7",
 ]

 [tool.setuptools]
 package-dir = {"" = "src"}

 [tool.setuptools.packages.find]
 where = ["src"]


